# sigmos

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  _config.yml  astro.config.mjs  code_rules.md  design_specs.md  examples.md  index.md  package-lock.json  package.json  tailwind.config.mjs
.github/workflows/: ci.yml  deploy.yml  pages.yml
assets/css/: style.scss
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: ast.rs  grammar.pest  lib.rs  parser.rs  types.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs  mcp.rs  registry.rs  rest.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: engine.rs  events.rs  lib.rs  lifecycle.rs  plugins.rs
crates/transpiler/: Cargo.toml
crates/transpiler/src/: lib.rs
docs/: api-reference.md  developer-guide.md  user-guide.md
examples/: README.md  agent.sigmos  ai-content-pipeline.sigmos  user-management.sigmos  workflow.sigmos
examples/cybersecurity/: apt-simulation.sigmos  c2-infrastructure.sigmos  data-exfiltration.sigmos  forensics-analyst.sigmos  incident-commander.sigmos  living-off-land.sigmos  security-manager.sigmos  soc-analyst.sigmos  social-engineering-automation.sigmos  threat-detection.sigmos  threat-hunter.sigmos  vuln-manager.sigmos  zero-day-exploitation.sigmos
examples/ecommerce/: recommendation-engine.sigmos
examples/fintech/: arbitrage-strategy.sigmos  grid-trading-strategy.sigmos  market-making-strategy.sigmos  mean-reversion-strategy.sigmos  momentum-strategy.sigmos  pairs-trading-strategy.sigmos  trading-system.sigmos
examples/healthcare/: patient-monitoring.sigmos
examples/language-expert/: code-review-expert.sigmos  documentation-expert.sigmos  go-expert.sigmos  java-expert.sigmos  javascript-expert.sigmos  performance-review-expert.sigmos  python-expert.sigmos  rust-expert.sigmos  security-review-expert.sigmos
examples/logistics/: supply-chain.sigmos
examples/manufacturing/: iot-monitoring.sigmos
examples/smart-city/: urban-management.sigmos
src/layouts/: Layout.astro
src/pages/: examples.astro  index.astro
tests/: benchmarks.rs  fuzz_tests.rs  integration_tests.rs  property_tests.rs
