[workspace]
members = [
    "crates/core",
    "crates/runtime",
    "crates/cli",
    "crates/plugins",
    "crates/transpiler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["copyleftdev"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/copyleftdev/sigmos"
description = "SIGMOS: Sigma Modular Operating Spec - AI-native DSL for composable, reactive systems"
keywords = ["dsl", "ai", "reactive", "composable", "orchestration"]
categories = ["development-tools", "parser-implementations"]

[workspace.dependencies]
# Core parsing and AST
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI tooling
clap = { version = "4.4", features = ["derive"] }
miette = { version = "7.2", features = ["fancy"] }
thiserror = "1.0"

# Testing
proptest = "1.4"
insta = "1.34"
trybuild = "1.0"

# Runtime and async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Type system and validation
indexmap = "2.1"
once_cell = "1.19"
