[package]
name = "sigmos-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SIGMOS command-line interface and tooling"

[[bin]]
name = "sigmos"
path = "src/main.rs"

[dependencies]
sigmos-core = { path = "../core" }
sigmos-runtime = { path = "../runtime" }
sigmos-transpiler = { path = "../transpiler" }
clap.workspace = true
miette.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
insta.workspace = true
