[package]
name = "sigmos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SIGMOS core parser, grammar, and AST definitions"

[dependencies]
pest.workspace = true
pest_derive.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
